setup for forgot password (incomplete)

--- a/.env
+++ b/.env
@@ -36,5 +36,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DRIVER=smtp
+MAILER_DSN=smtp://mailer:50612
+MAILER_HOST=mailer
+MAILER_PORT=50612
+MAILER_URL=smtp://mailer:50612
+MAILER_WEB_PORT=50613
+MAILER_WEB_SERVER=http://mailer:50613
+MAILER_WEB_URL=http://mailer:50613
 ###< symfony/mailer ###
