--- a/.env
+++ b/.env
@@ -36,12 +36,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DRIVER=smtp
-MAILER_DSN=smtp://mailer:50612
-MAILER_HOST=mailer
-MAILER_PORT=50612
-MAILER_URL=smtp://mailer:50612
-MAILER_WEB_PORT=50613
-MAILER_WEB_SERVER=http://mailer:50613
-MAILER_WEB_URL=http://mailer:50613
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
