--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=1cd905b4e4e72140975f78f1285ca8c5
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:2006/app?serverVersion=8&charset=utf8mb4"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -36,5 +36,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+#MAILER_DSN=smtp://maildev_user:maildev_pass@127.0.0.1:1025
+MAILER_DSN=smtp://maildev_user:maildev_pass@127.0.0.1:2125
 ###< symfony/mailer ###
