--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     images_directory: '%kernel.project_dir%/public/img/'
 services:
     # default configuration for services in *this* file
+    App\Security\AppUserChecker: ~
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
