--- a/.env
+++ b/.env
@@ -23,10 +23,7 @@ APP_SECRET=1cd905b4e4e72140975f78f1285ca8c5
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL=mysql://root:password@database:3306/main
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:2006/app?serverVersion=8&charset=utf8mb4"
-#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=mysql://root:password@127.0.0.1:2006/main
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
